# spyq

./: .gitignore  Makefile  README.md  pyproject.toml
src/spyq/: __init__.py  cli.py  setup_quality_guard.py
tests/: test_cli.py  test_installer.py
