[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spyq"
version = "0.1.0"
description = "SPYQ - Shell Python Quality Guard"
authors = [
    {name = "Tom Sapletta"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]
spyq = "spyq.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
